2005-01-18  Erlend Aasland  <erlenda@gmail.com>

	* scm/auto-beam.scm: Simplify score-override-auto-beam-setting

	* Documentation/user/notation.itely: Document
	score-override-auto-beam-setting Fix documentation for
	revert-auto-beam-setting.

2005-01-18  Werner Lemberg  <wl@gnu.org>

	* scm/framework-ps.scm (ps-embed-cff): Fix DSC comments.
	(procset): New function to define a procset resource.
	(preamble): Use it.

2005-01-18  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* mf/GNUmakefile (MFTRACE_FLAGS): add --no-afm to MFTRACE_FLAGS

2005-01-17  Erlend Aasland  <erlenda@gmail.com>

	* scm/define-markup-commands.scm: Change number->markletter-string
	to take two arguments (vector number). Add number->mark-alphabet-vector
	and markalphabet markup command.

	* scm/translation-functions.scm: Add format-mark-box-alphabet,
	format-mark-alphabet, format-mark-box-barnumbers and
	format-mark-barnumbers. Fix bug in format-mark-box-numbers.

2005-01-17  Graham Percival  <gperlist@shaw.ca>

	* Documentation/user/examples.itely: add SATB automatic piano
	reduction template.

	* Documentation/user/notation.itely: added info about changing
	partcombine texts.  Also adds examples of alternate lyrics.

	* Documentation/user/changing-defaults.itely: added warning
	about \RemoveEmptyStaffContext overriding previous changes.

2005-01-17  Werner Lemberg  <wl@gnu.org>

	* buildscripts/mf-to-table.py: Use `FetaAlphabetEncoding' for
	feta-alphabet*.

2005-01-17  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* python/lilylib.py (make_ps_images): don't do final showpage for
	multi-page documents.
	
	* VERSION (MY_PATCH_LEVEL): release 2.5.8

2005-01-16  Graham Percival  <gperlist@shaw.ca>

	* Documentation/user/lilypond.tely: changed order of appendices;
	unified index should be last.

	* Documentation/user/notation.itely: add example of key signatures
	and info about Staff.printKeyCancellation.

2005-01-16  Han-Wen Nienhuys  <hanwen@xs4all.nl>
